made checkstyle compliant
also slight fix to data fetch